[gd_scene load_steps=3 format=2]

[ext_resource path="res://tools/grog/core/server.gd" type="Script" id=1]
[ext_resource path="res://tools/grog/lang/compiler.gd" type="Script" id=2]

[node name="grog_server" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="compiler" type="Node" parent="."]
script = ExtResource( 2 )

[node name="control" type="Control" parent="."]
anchor_right = 0.333
anchor_bottom = 1.0

[node name="list_saved_games" type="Button" parent="control"]
anchor_right = 1.0
anchor_bottom = 0.2
text = "List saved games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="saved_games" type="VBoxContainer" parent="control"]
anchor_top = 0.2
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="control2" type="Control" parent="."]
anchor_left = 0.333
anchor_right = 0.667
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="generate_fake" type="Button" parent="control2"]
anchor_right = 1.0
anchor_bottom = 0.2
text = "Generate fake"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="control/list_saved_games" to="." method="_on_list_saved_games_pressed"]
[connection signal="pressed" from="control2/generate_fake" to="." method="_on_generate_fake_pressed"]
